--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-google-generativeai
-python-dotenv
-langchain
-PyPDF2
-faiss-cpu
-langchain_google_genai
+streamlit==1.40.1
+google-generativeai==0.8.3
+python-dotenv==1.0.1
+langchain==0.3.7
+PyPDF2==3.0.1
+faiss-cpu==1.9.0
+langchain_google_genai==2.0.4
