--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ google-generativeai==0.8.3
 python-dotenv==1.0.1
 langchain==0.3.7
 PyPDF2==3.0.1
+langchain-community==0.3.7
 faiss-cpu==1.9.0
 langchain_google_genai==2.0.4
+
